arr/jellyfin/jellyfin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: arr
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: arr
spec:
  selector:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: arr
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
